fix: Remove the overflow caused by slider controls on very small screens

--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -6,15 +6,30 @@
     background-color: #2e2e2e;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     &__control {
       border: none;
       border-top: 4px solid #111;
       color: white;
       background: transparent;
       font-weight: 400;
-      font-size: 1.2rem;
-      padding: 1rem 2rem;
+      padding: 0.5rem 1rem;
+      &__heading {
+        font-weight: 600;
+        font-size: 1rem;
+      }
+      &__subheading {
+        font-size: 0.8rem;
+      }
+      @include media-breakpoint-up(sm) {
+        padding: 1rem 2rem;
+        &__heading {
+          font-size: 1.2rem;
+        }
+        &__subheading {
+          font-size: 1rem;
+        }
+      }
       opacity: 0.8;
       &:focus,
       &:hover {
